tests/miniJava/neg/000147_mutation.MiniJava
class java { public static class void Main ( String [ ] java ) { { } } }
